--- a/WhatShouldIMake/.classpath
+++ b/WhatShouldIMake/.classpath
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="images"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/amyry/Downloads/java-json.jar/java-json.jar"/>
-	<classpathentry kind="lib" path="C:/Users/amyry/Downloads/jar_files/okhttp-3.9.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/amyry/Downloads/jar_files/okio-1.13.0.jar"/>
+	<classpathentry kind="lib" path="D:/Documentos/MBA/Wharton/0. Courses/CIT590/HW11 - Final project/java-json.jar"/>
+	<classpathentry kind="lib" path="D:/Documentos/MBA/Wharton/0. Courses/CIT590/HW11 - Final project/okhttp-3.9.0.jar"/>
+	<classpathentry kind="lib" path="D:/Documentos/MBA/Wharton/0. Courses/CIT590/HW11 - Final project/okio-1.13.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
