--- a/WhatShouldIMake/.classpath
+++ b/WhatShouldIMake/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="C:/Users/amyry/Downloads/java-json.jar/java-json.jar"/>
 	<classpathentry kind="lib" path="C:/Users/amyry/Downloads/jar_files/okhttp-3.9.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/amyry/Downloads/jar_files/okio-1.13.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
