--- a/WhatShouldIMake/.classpath
+++ b/WhatShouldIMake/.classpath
@@ -6,9 +6,9 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/amyry/Downloads/java-json.jar/java-json.jar"/>
-	<classpathentry kind="lib" path="C:/Users/amyry/Downloads/jar_files/okhttp-3.9.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/amyry/Downloads/jar_files/okio-1.13.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="D:/Documentos/MBA/Wharton/0. Courses/CIT590/HW11 - Final project/java-json.jar"/>
+	<classpathentry kind="lib" path="D:/Documentos/MBA/Wharton/0. Courses/CIT590/HW11 - Final project/okhttp-3.9.0.jar"/>
+	<classpathentry kind="lib" path="D:/Documentos/MBA/Wharton/0. Courses/CIT590/HW11 - Final project/okio-1.13.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
